--- a/estilos/style.css
+++ b/estilos/style.css
@@ -47,3 +47,22 @@ iframe#tela{
 
 
 }
+
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais a> img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.377);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+ border: 2px solid rgb(255, 254, 254); 
+ transform: translate(-3px, -3px);
+ box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.514);
+ transition:trasnform .3s, border 1s ;
+}
